--- a/styles/custom.css
+++ b/styles/custom.css
@@ -10,35 +10,28 @@ body {
 }
 
 .main {
-    width: 100%;
+    display: grid;
+    place-items: center;
     height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .quiz_box {
     background-color: rgba(0, 0, 0, 0.53);
-    height: 55%;
-    padding: 200px 120px;
-    max-width: 60%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    padding: 60px 40px;
     border-radius: 5%;
     color: white;
     box-shadow: 0px 0px 15px black;
+    min-width: 50%;
+    max-width: 80%;
 }
 
-.main h2 {
+.main h2, .main h3 {
     font-size: 2rem;
     text-align: center;
 }
 
 .options {
     margin-top: 20px;
-    margin-right: 170px;
     display: flex;
     flex-direction: column;
 }
@@ -54,13 +47,27 @@ body {
 
 .btn {
     margin-top: 20px;
-    padding: 5px;
-    width: 30%;
+    padding: 15px;
+    width: 200px;
     font-size: 1.2rem;
     background-color: #af5528;
     color: white;
     border: none;
-    box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.443);
+    border-radius: 10px;
+    outline: none;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.443);
+    transition: 0.4s ease;
+}
+ 
+.btn:hover{
+    background-color: white;
+    color: #af5528;
+}
+
+.text-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .quiz_box h3{
